# app-lib

./: .gitignore  README  README.md  orgmode-instr.org
Cpp/MPL/: README
Cpp/STL/: stl.blup.org
Cpp/fractional_arithmetic_1/: main.cpp
Cpp/function_objects_1/: main.cpp
Cpp/numeric_limits_1/: main.cpp
Cpp/perfect_forwarding/: main.cpp
Cpp/ref_and_func_type_wrappers/: main.cpp
Cpp/shared_ptr_1/: main.cpp
Cpp/shared_ptr_cast/: main.cpp
Cpp/shared_ptr_get_deleter/: main.cpp
Cpp/tuple_operation/: CMakeLists.txt  main.cpp
Cpp/weak_ptr_1/: person.cpp
MPL/: README
MPL/mpl__fold_algorithm_1/: main.cpp
MPL/mpl__high_order_metafunc_1/: main.cpp
MPL/mpl__inserters_1/: t_snap
MPL/mpl__integral_type_wrappers_1/: CMakeLists.txt
MPL/mpl__metafunc_dimensions_1/: main.cpp
MPL/mpl__metafunc_dimentions_1/: CMakeLists.txt  main.cpp
MPL/mpl__sequence_building_algo_1/: main.cpp
MPL/mpl__sequences_and_algorithms_1/: CMakeLists.txt  main.cpp
MPL/mpl__type_traits_1/: main.cpp
MPL/mpl__views_and_iterator_adapters_1/: CMakeLists.txt  main.cpp
MPL/mpl__views_and_iterator_adapters_1/include/: own_view.hpp  view_example.hpp  views.hpp
PQApp/pqxx_create_table/: CMakeLists.txt
PQApp/pqxx_insert/: main.cpp
STL/: stl.blup.org
clocks_and_timers_1/: main.cpp
combinators/pindex/: CMakeLists.txt  main.cpp
combinators/pindex/include/: method.hpp  utility.hpp
elisp/: basics.el  fs-util.el  helm-interface-example.el  loops.el
fractional_arithmetic_1/: main.cpp
pairs_and_tuples/: main.cpp
perfect_forwarding/: CMakeLists.txt
tuple_operation/: main.cpp
type_utilities_1/: main.cpp
unique_ptr_1/: main.cpp
weak_ptr_1/: main.cpp
weak_ptr_2/: main.cpp  person.cpp
(+112 files in other folders)
